* 0.12.0 (unreleased)
   * Quality of Life
      * Added colourblind correction mode
      * Exposed more colourblind options to the user
      * Can modify game speed directly instead of using a slowmode difficulty for accessibility
      * Messages get folded instead of repeating
   * Engine
      * Threaded more loading components
      * Lua require now caches chunks
      * Dropped SDL_image fallback

* 0.11.1 (unreleased)
   * Point defense won't shoot at disabled pilots anymore
   * `kidnapped/traffic_00`: fixed formating string telling the player what system to go to
   * Fixed many typos
   * Translation updates

* 0.11.0
   * Fixed beams only showing hit explosions on one target being hit instead of all
   * Consider beam width when computing collisions
   * Made beam effects a bit thinner
   * Point defense weapons should track fighters much better now
   * Fixed point defense weapons not firing properly
   * Approach no longer instantly starts autonav unless a space object or derelict is already targeted
   * Tweaked the approach logic to prefer planets over pilots when only planet is selected
   * Approach should no longer play extraneous target sounds
   * Stores now show amount for unique outfits, while equipment windows shall not
   * Fixed POI missions having markers say 'Point of Interest' instead of 'Sensor Anomaly'
   * Most consistent texture interpolation when using mipmaps
   * Pilots will do their first distress somewhat sooner
   * Can only start to afterburn with enough energy for 0.5 seconds of afterburning
   * Updated meson.build to require SDL 2.0.26 which seems to be minimum supported version now
   * Fixed a certain faction being enemies with wild ones when they shouldn't necessarily be
   * Soromid Arx now has one non-exclusive heavy non-bio slot
   * Buffed Scanning Combat AI to have an additional +15% tracking
   * Pirates should no longer have presence in Sol under certain conditions